<resources>
	    <string name="app_name">unfollowerstats</string>
	    <string name="navigation_drawer_open">Open navigation drawer</string>
	    <string name="navigation_drawer_close">Close navigation drawer</string>
	    <string name="nav_header_title">Android Studio</string>
	    <string name="nav_header_subtitle">android.studio@android.com</string>
	    <string name="nav_header_desc">Navigation header</string>
	    <string name="action_settings">Settings</string>
	

	    <string name="menu_dashbord">Dashboard</string>
	    <string name="menu_unfollowers">Unfollowers</string>
	    <string name="menu_followers">Followers</string>
	    <string name="menu_following">Following</string>
	    <string name="menu_non_followback">Non-Followback</string>
	    <string name="menu_idontnon_followback">I-Dont-Followback</string>
	    <string name="menu_blocked">Blocked</string>
	    <string name="menu_muted">Muted</string>
	    <string name="menu_update_data">Update Data</string>
	    <string name="menu_logout">Logout</string>
	    <string name="menu_settings">Settings</string>
	    <string name="menu_payment">Payment</string>
	    <string name="election_results">Device Stats</string>
	    <string name="pie_chart">Created by UnfollowerStats.com</string>

    <string name="rcp_follow ">Follow</string>
    <string name="rcp_unfollow ">Unfollow</string>
    <string name="rcp_fbrate">FB RATE</string>
    <string name="rcp_followers ">Followers</string>
    <string name="rcp_following ">Following</string>

    <string name="db_unfollowers">Unfollowers</string>
    <string name="db_followers">Followers</string>
    <string name="db_following">Following</string>
    <string name="db_nonfollowback">NonFollowBack</string>
	<string name="db_new_unf">New Unfollowers</string>
    <string name="db_new_follow">New Followers</string>
    <string name="db_new_following">New Following</string>


    <string name="db_idontfollowwback">IDontFollowBack</string>
    <string name="db_blocked">Blocked</string>
    <string name="db_muted">Muted</string>
    <string name="db_tweetsent">Tweet Sent</string>
    <string name="db_joinedtweetter">Joined Twitter</string>



    <string name="title_tweetanalyze">Tweet Analyze</string>
    <string name="title_tweetanalyze_rt">Retweets</string>
    <string name="title_tweetanalyze_lk">Likes</string>
    <string name="title_tweetanalyze_td">Tweets/Days</string>
    <string name="title_followersunf">Follower/Unfollower Stats</string>

    <string name="title_bestfr">Best Friends</string>
    <string name="title_mostmen">Most Mentions</string>
    <string name="title_devicest">Device Stats</string>
    <string name="title_dailyst">Daily Stats</string>



	</resources>

